<resources>
    <string name="app_name">DCVSConnect</string>
    <!--Main Screen -->
    <string name="HomeScreen">Home Screen Background</string>
    <!--internet Screen-->
    <string name="WebBTN1">NAC Website</string>
    <string name="WebBTN2">Google Website</string>
    <string name="WebBTN3">Google Maps</string>
    <string name="WebBTN4">ABC News</string>
    <string name="WebBTN5">Seven News</string>
    <string name="WebBTN6">Seniors News Website</string>
    <!--Game Screen-->
    <string name="GameBTN1" translatable="false">Backgammon Game</string>
    <string name="GameBTN2" translatable="false">Chess Game</string>
    <string name="GameBTN3" translatable="false">Euchre Game</string>
    <string name="GameBTN4" translatable="false">Four in a Row Game</string>
    <string name="GameBTN5" translatable="false">Solitare Game</string>
    <string name="GameBTN6" translatable="false">Sudoku Game</string>
    <!--Fun Screen-->
    <string name="GameSBTN">Games Screen</string>
    <string name="InternetBTN">Internet Screen</string>
    <string name="RadioBTN">Radio Button</string>
    <!--Help Screen -->
    <string name="HelpGuideBTN">Help Guide App</string>
    <string name="SkypeCheck">Check Version of Skype</string>
    <string name="DCVSCheatsheet">DCVS App Cheat Sheet</string>
    <!--Chat Screen-->
    <string name="SpeedDial1">Volunteer One</string>
    <string name="SpeedDial2">Volunteer Two</string>
    <string name="SpeedDial3">Volunteer Three</string>
    <string name="SpeedDial4">DCVS Office</string>
    <string name="SpeedDial5"> </string>
    <string name="SpeedDial6"> </string>
    <string name="SpeedDial7"> </string>
    <string name="SpeedDial8"> </string>
    <string name="SpeedDial9"> </string>
    <string name="SpeedDialNN">No Number</string>
    <string name="SkypeBTN">Skype App</string>
    <string name="EditSwitch">EDIT | ADD</string>
    <string name="EditSwitchCD">Edit Switch</string>
    <!--Speed Dial -->
    <string name="SpeedDialOne" translatable="false">Dial 1</string>
    <string name="SpeedDialTwo" translatable="false">Dial 2</string>
    <string name="SpeedDialThree" translatable="false">Dial 3</string>
    <string name="SpeedDialFour" translatable="false">Dial 4</string>
    <string name="SpeedDialFive">Dial 5</string>
    <string name="SpeedDialSix">Dial 6</string>
    <string name="SpeedDialSeven">Dial 7</string>
    <string name="SpeedDialEight">Dial 8</string>
    <string name="SpeedDialNine"> </string>
    <string name="dcvscontacts">DCVS Contact List</string>
    <string name="ffcontactlist">Friends and Family Contacts</string>
    <string name="sgcontactlist">Social Groups</string>

    <string name="PlayBTN">PLAY</string>
    <string name="PauseBTN">PAUSE</string>
    <string name="NACRadio">NAC Radio</string>
    <!-- Radio Stations -->
    <string name="NACRadiostation">Nundah Activity Centre Radiostation</string>
    <string name="DCVSRadioStation">DCVS Radiostation Golden Memories</string>
    <!-- Build Names -->
    <string name="BVDCVS">DCVS</string>
    <string name="BVLocal">NAC</string>
    <string name="BVWifi">Wifi NAC</string>

    <string name="connection_error">Unable to load content. Check your network connection</string>
    <string name="xml_error">Error Parsing XML</string>

    <string name="Update_Speed_Dial">Update Speed Dial Pad</string>

    <string name="CurrentVersion"> V1.4 Release </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Options Menu -->
    <string name="optionsmenu">Options</string>
    <string name="optionmenutitle">DCVS App Settings</string>
    <string name="optionsappshort">Application Shortcuts</string>
    <string name="optionsgames">Games - </string>
    <string name="optionsinternet">Internet - </string>
    <string name="optionsskype">Skype - </string>
    <string name="optionsrun">Run on Skype </string>
    <string name="optionsapv">App Version</string>
    <string name="optionscheckupdate">Check for Update</string>

    <!-- Options Games -->
    <string name="optionsgames1">1</string>
    <string name="optionsgames2">2</string>
    <string name="optionsgames3">3</string>
    <string name="optionsgames4">4</string>
    <string name="optionsgames5">5</string>
    <string name="optionsgames6">6</string>

    <!-- Options Internet -->
    <string name="optionsweb1">1</string>
    <string name="optionsweb2">2</string>
    <string name="optionsweb3">3</string>
    <string name="optionsweb4">4</string>
    <string name="optionsweb5">5</string>
    <string name="optionsweb6">6</string>
    <string name="optionsweb7">7</string>
    <string name="optionsweb8">8</string>

    <!-- Options Skype -->
    <string name="optionsskype4">4</string>
    <string name="optionsskype5">5</string>
    <string name="optionsskype6">6</string>
    <string name="optionsskype7">7</string>
    <string name="optionsskype8">8</string>
    <string name="optionsskype9">9</string>

    <!-- Options Toggle -->
    <string name="optionsstartbtn">Run on Startup</string>

    <!-- Options Version -->
    <string name="optionsapvtext">App Version: </string>
    <string name="optionsapvbtntext">Check for Update</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
