<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.nac.kalisynth.dcvsconnect2.DCVSChat"
    android:background="@drawable/speeddialbg"
    android:contentDescription="@string/EditSwitchCD"
    tools:ignore="Overdraw">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SkypeBTN"
        android:background="@drawable/dcvsrectskype"
        android:onClick="skypeonclick"
        android:contentDescription="@string/SkypeBTN"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="250dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/skypename"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update_Speed_Dial"
        android:id="@+id/updatebtn"
        android:contentDescription="@string/Update_Speed_Dial"
        android:onClick="onUpdateClick"
        android:layout_above="@+id/skypename"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SkypeList"
        android:layout_above="@+id/SkypeBTN"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dcvscontacts"
        android:background="@drawable/dcvssd"
        android:contentDescription="@string/dcvscontacts"
        android:onClick="onDCVSCClick"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/ffcontacts" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ffcontacts"
        android:background="@drawable/ffsd"
        android:contentDescription="@string/ffcontactlist"
        android:onClick="onFFCClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sgcontacts"
        android:background="@drawable/sgsd"
        android:contentDescription="@string/sgcontactlist"
        android:nestedScrollingEnabled="false"
        android:onClick="onSGClick"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/ffcontacts" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/s7"
            android:background="@drawable/sd7"
            android:contentDescription="@string/SpeedDialSeven"
            android:layout_below="@+id/s6"
            android:layout_alignEnd="@+id/sgcontacts"
            android:layout_row="0"
            android:layout_column="0" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/s4"
            android:background="@drawable/sd4"
            android:contentDescription="@string/SpeedDialFour"
            android:layout_above="@+id/s3"
            android:layout_alignStart="@+id/s2"
            android:layout_row="0"
            android:layout_column="1" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/s6"
            android:background="@drawable/sd6"
            android:contentDescription="@string/SpeedDialSix"
            android:layout_below="@+id/s5"
            android:layout_alignStart="@+id/s8"
            android:layout_row="0"
            android:layout_column="2" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/s8"
            android:background="@drawable/sd8"
            android:contentDescription="@string/SpeedDialEight"
            android:layout_below="@+id/s7"
            android:layout_toEndOf="@+id/ffcontacts"
            android:layout_row="1"
            android:layout_column="0" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/s3"
            android:background="@drawable/sd3"
            android:contentDescription="@string/SpeedDialThree"
            android:layout_above="@+id/SkypeBTN"
            android:layout_toStartOf="@+id/ffcontacts"
            android:layout_row="1"
            android:layout_column="2" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/s2"
            android:background="@drawable/sd2"
            android:contentDescription="@string/SpeedDialTwo"
            android:layout_below="@+id/s7"
            android:layout_toStartOf="@+id/s1"
            android:layout_row="3"
            android:layout_column="0" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/s5"
            android:background="@drawable/sd5"
            android:contentDescription="@string/SpeedDialFive"
            android:layout_above="@+id/s4"
            android:layout_alignStart="@+id/skypename"
            android:layout_row="3"
            android:layout_column="1" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/s1"
            android:background="@drawable/sd1"
            android:contentDescription="@string/SpeedDialOne"
            android:layout_alignBottom="@+id/SkypeBTN"
            android:layout_alignStart="@+id/s5"
            android:layout_row="3"
            android:layout_column="2" />
    </GridLayout>

</RelativeLayout>
