<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.nac.kalisynth.dcvsconnect2.Dcvsinternet"
    android:background="@drawable/dcvs_ui_internet_screen"
    tools:ignore="Overdraw">

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/iWebView"
        android:layout_toEndOf="@+id/seniorbtnlayout"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:id="@+id/seniorbtnlayout">

        <Button
            android:text="@string/WebBTN1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/nacwbtn"
            android:textSize="20sp"/>

        <Button
            android:text="@string/WebBTN6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/seniorowbtn" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/newswlayout">

        <Button
            android:text="@string/WebBTN4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/abcnwbtn"
            android:layout_weight="1" />

        <Button
            android:text="@string/WebBTN5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sevennwbtn"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <Button
            android:text="@string/WebBTN2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/googlewbtn" />

        <Button
            android:text="@string/WebBTN3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mapwbtn"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
