<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.nac.kalisynth.dcvsconnect2.Dcvsgames"
    android:background="@drawable/gamesscreen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:background="#91592f"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/linearLayout5"
        android:layout_marginEnd="81dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GameBTN1"
            android:background="@drawable/dcvsbackgammonbtn"
            android:contentDescription="@string/GameBTN1"
            android:onClick="backgammononclick" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GameBTN2"
            android:background="@drawable/dcvschessbtn"
            android:onClick="chessonclick"
            android:contentDescription="@string/GameBTN2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_marginStart="99dp"
        android:layout_alignTop="@+id/linearLayout5"
        android:layout_toEndOf="@+id/linearLayout5">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GameBTN4"
            android:background="@drawable/dcvssolitarebtn"
            android:onClick="solitareonclick"
            android:contentDescription="@string/GameBTN5" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GameBTN5"
            android:background="@drawable/dcvs4inarowbtn"
            android:contentDescription="@string/GameBTN4"
            android:onClick="finaronclick" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GameBTN3"
            android:background="@drawable/dcvseuchrebtn"
            android:contentDescription="@string/GameBTN3"
            android:onClick="euchreonclick" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GameBTN6"
            android:background="@drawable/dcvssudokubtn"
            android:contentDescription="@string/GameBTN6"
            android:onClick="sudokuonclick" />
    </LinearLayout>
</RelativeLayout>
