<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.nac.kalisynth.dcvsconnect2.GamesHub"
    android:background="@drawable/dcvs_ui_playscreen"
    tools:ignore="Overdraw">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/GameBTN3"
            android:text="@string/GameBTN3"
            android:background="@drawable/euchrebtn"
            android:gravity="bottom|center"
            android:paddingBottom="40dp"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textColor="#0e1f29"
            android:id="@+id/gbtn3" />

        <Button
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="@string/GameBTN6"
            android:contentDescription="@string/GameBTN6"
            android:background="@drawable/sudokubtn"
            android:gravity="bottom|center"
            android:paddingBottom="40dp"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textColor="#0e1f29"
            android:id="@+id/gbtn6" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="@string/GameBTN1"
            android:contentDescription="@string/GameBTN1"
            android:background="@drawable/backgammon"
            android:gravity="bottom|center"
            android:paddingBottom="40dp"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textColor="#0e1f29"
            android:id="@+id/gbtn1" />

        <Button
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="@string/GameBTN2"
            android:contentDescription="@string/GameBTN2"
            android:gravity="bottom|center"
            android:paddingBottom="40dp"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textColor="#0e1f29"
            android:background="@drawable/chess"
            android:id="@+id/gbtn2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout5"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="@string/GameBTN5"
            android:contentDescription="@string/GameBTN5"
            android:background="@drawable/solitarebtn"
            android:gravity="bottom|center"
            android:paddingBottom="40dp"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textColor="#0e1f29"
            android:id="@+id/gbtn5" />

        <Button
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="@string/GameBTN4"
            android:contentDescription="@string/GameBTN4"
            android:background="@drawable/finarbtn"
            android:gravity="bottom|center"
            android:paddingBottom="40dp"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textColor="#0e1f29"
            android:id="@+id/gbtn4" />

    </LinearLayout>
</RelativeLayout>
